# pointcloud_to_laserscan

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  nodelets.xml  package.xml
include/pointcloud_to_laserscan/: laserscan_to_pointcloud_node.hpp  laserscan_to_pointcloud_nodelet.h  pointcloud_to_laserscan_node.hpp  pointcloud_to_laserscan_nodelet.h  visibility_control.h
launch/: sample_laserscan_to_pointcloud_launch.py  sample_laserscan_to_pointcloud_node.launch  sample_laserscan_to_pointcloud_nodelet.launch  sample_node.launch  sample_nodelet.launch  sample_pointcloud_to_laserscan_launch.py
src/: dummy_pointcloud_publisher.cpp  laserscan_to_pointcloud_node.cpp  laserscan_to_pointcloud_nodelet.cpp  pointcloud_to_laserscan_node.cpp  pointcloud_to_laserscan_nodelet.cpp
